# creating-cmake-library

./: CMakeLists.txt  add-config.cmake  main.cpp
include/add/: add.h
src/: add.cpp
test/: CMakeLists.txt  main.cpp
